--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server/index.js"
+    "dev": "nodemon server/index.js",
+    "pretty": "prettier --single-quote --trailing-comma=es5  --write '**/*.js' &&  prettier --single-quote --trailing-comma=es5  --write '**/*.js'"
   },
   "keywords": [],
   "author": "",
@@ -34,6 +35,7 @@
     "styled-components": "4.1.3"
   },
   "devDependencies": {
-    "morgan": "1.9.1"
+    "morgan": "1.9.1",
+    "prettier": "1.15.3"
   }
 }
